# warehouse-bot

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9b9bd52bce62_create_product_table.py
tests/: conftest.py
tests/handlers/: test_product_management.py
warehouse_bot/: main.py
warehouse_bot/core/: config.py
warehouse_bot/db/: models.py  session.py
warehouse_bot/fsm/: product_states.py
warehouse_bot/handlers/: commands.py  product_management.py
warehouse_bot/middlewares/: db_session.py
warehouse_bot/services/: product_service.py
